feat: style and reload

--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -2,51 +2,66 @@
 
 <button (click)="openCreateUserModal()">Criar</button>
 
-<div *ngIf="createUserModalVisible">
-  <form action="">
-    <input type="text" name="nome" [(ngModel)]="newUser.nome" placeholder="Nome">
-    <input type="text" name="sobrenome" [(ngModel)]="newUser.sobrenome" placeholder="Sobrenome">
-    <input type="email" name="email" [(ngModel)]="newUser.email" placeholder="Email">
-    <input type="date" name="dataNascimento" [(ngModel)]="newUser.dataNascimento">
-    <select [(ngModel)]="newUser.escolaridade" name="escolaridade" id="escolaridade">
-      <option *ngFor="let option of escolaridadeOptions" [ngValue]="option">
-        {{option}}
-      </option>
-    </select>
-  </form>
-  <button (click)="confirmCreateUser()">Confirmar</button>
-  <button (click)="closeCreateUserModal()">Cancelar</button>
-</div>
+<section *ngIf="createUserModalVisible" class="modal-section">
+  <div class="modal-div">
+    <form action="">
+      <input type="text" name="nome" [(ngModel)]="newUser.nome" placeholder="Nome">
+      <input type="text" name="sobrenome" [(ngModel)]="newUser.sobrenome" placeholder="Sobrenome">
+      <input type="email" name="email" [(ngModel)]="newUser.email" placeholder="Email">
+      <input type="date" name="dataNascimento" [(ngModel)]="newUser.dataNascimento">
+      <select [(ngModel)]="newUser.escolaridade" name="escolaridade" id="escolaridade">
+        <option *ngFor="let option of escolaridadeOptions" [ngValue]="option">
+          {{option}}
+        </option>
+      </select>
+    </form>
+    <div>
+      <button (click)="confirmCreateUser()">Confirmar</button>
+      <button (click)="closeCreateUserModal()" class="delete-button">Cancelar</button>
+    </div>
+  </div>
+</section>
 
 <ul>
   <li *ngFor="let user of users">
-    <span>{{user.nome}} {{user.sobrenome}}</span>
-    <span>{{user.email}}</span>
-    <span>{{user.dataNascimento | date:'dd/MM/yyyy'}}</span>
-    <span>{{user.escolaridade}}</span>
-    <button (click)="openEditUserModal(user)">Alterar</button>
-    <button (click)="openDeleteUserModal(user)">Deletar</button>
+    <span>Nome: {{user.nome}} {{user.sobrenome}}</span>
+    <span>Email: {{user.email}}</span>
+    <span>Data de Nascimento: {{user.dataNascimento | date:'dd/MM/yyyy'}}</span>
+    <span>Escolaridade: {{user.escolaridade}}</span>
+
+    <div>
+      <button (click)="openEditUserModal(user)">Alterar</button>
+      <button (click)="openDeleteUserModal(user)" class="delete-button">Deletar</button>
+    </div>
   </li>
 </ul>
 
-<div *ngIf="editUserModalVisible">
-  <form action="">
-    <input type="text" name="nome" [(ngModel)]="userToEdit.nome">
-    <input type="text" name="sobrenome" [(ngModel)]="userToEdit.sobrenome">
-    <input type="email" name="email" [(ngModel)]="userToEdit.email">
-    <input type="date" name="dataNascimento" [(ngModel)]="userToEdit.dataNascimento">
-    <select [(ngModel)]="userToEdit.escolaridade" name="escolaridade" id="escolaridade">
-      <option *ngFor="let option of escolaridadeOptions" [value]="option">
-        {{option}}
-      </option>
-    </select>
-  </form>
-  <button (click)="confirmeEditUser()">Confirmar</button>
-  <button (click)="closeEditUserModal()">Cancelar</button>
-</div>
+<section *ngIf="editUserModalVisible" class="modal-section">
+  <div class="modal-div">
+    <form action="">
+      <input type="text" name="nome" [(ngModel)]="userToEdit.nome">
+      <input type="text" name="sobrenome" [(ngModel)]="userToEdit.sobrenome">
+      <input type="email" name="email" [(ngModel)]="userToEdit.email">
+      <input type="date" name="dataNascimento" [(ngModel)]="userToEdit.dataNascimento">
+      <select [(ngModel)]="userToEdit.escolaridade" name="escolaridade" id="escolaridade">
+        <option *ngFor="let option of escolaridadeOptions" [value]="option">
+          {{option}}
+        </option>
+      </select>
+    </form>
+    <div>
+      <button (click)="confirmeEditUser()">Confirmar</button>
+      <button (click)="closeEditUserModal()" class="delete-button">Cancelar</button>
+    </div>
+  </div>
+</section>
 
-<div *ngIf="deleteUserModalVisible">
-  <p>Tem certeza que deseja deletar o usuário {{userToDelete?.nome}}?</p>
-  <button (click)="confirmDeleteUser()">Confirmar</button>
-  <button (click)="closeDeleteUserModal()">Cancelar</button>
+<section *ngIf="deleteUserModalVisible" class="modal-section">
+  <div class="modal-div">
+    <p>Tem certeza que deseja deletar o usuário {{userToDelete?.nome}}?</p>
+    <div>
+      <button (click)="confirmDeleteUser()">Confirmar</button>
+      <button (click)="closeDeleteUserModal()" class="delete-button">Cancelar</button>
+    </div>
 </div>
+</section>
