--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,28 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #fff;
+  margin: 0;
+  text-align: center;
+}
+
+span {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+p {
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+app-root {
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+
+.modal-open {
+  overflow: hidden;
+}
